feat(auth): implementa keycloak e atualiza gerenciamento de usuários